--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "koa-bodyparser": "^4.2.1",
     "koa-easy-ws": "^1.1.1",
     "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.6",
     "socket.io": "^2.2.0",
     "uuid": "^3.3.2"
   }
