--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.0.0",
     "firebase-admin": "^7.3.0",
     "koa": "^2.7.0",
+    "koa-bearer-token": "^1.0.0",
     "koa-bodyparser": "^4.2.1",
     "koa-easy-ws": "^1.1.1",
     "koa-router": "^7.4.0",
