--- a/mobile-endpoint/kiosk.service
+++ b/mobile-endpoint/kiosk.service
@@ -1,14 +1,14 @@
 [Unit]
-Description=Capstone Kiosk
-Requires=graphical.target network-online.target
-# After=graphical.target network-online.target
+Description=Chromium Kiosk
+Wants=graphical.target
+After=graphical.target
 
 [Service]
 Environment=DISPLAY=:0
 Environment=XAUTHORITY=/home/pi/.Xauthority
 Type=simple
 ExecStart=/bin/bash /home/pi/dev/bin/kiosk.sh
-Restart=on-failure
+Restart=on-abort
 User=pi
 Group=pi
 
