--- a/admin/package.json
+++ b/admin/package.json
@@ -13,7 +13,8 @@
     "firebase": "^6.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "uuid": "^3.3.2"
   },
   "eslintConfig": {
     "extends": "react-app"
