Fix `showcasr-admin` package name

--- a/admin/package.json
+++ b/admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "showcasr-frontend",
+  "name": "showcasr-admin",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
@@ -20,11 +20,7 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
