--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "firebase": "^6.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-youtube": "^7.9.0"
   },
   "eslintConfig": {
     "extends": "react-app"
